Fix burger menu icon in dark mode

--- a/main/assets/main.scss
+++ b/main/assets/main.scss
@@ -186,6 +186,7 @@ a {
   a,
   .has-text-black,
   .navbar-item,
+  .navbar-burger,
   .has-text-grey-darker,
   .pagination-link,
   .pagination-next,
